--- a/newsite/templates/newsite/index.html
+++ b/newsite/templates/newsite/index.html
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="{% static 'img/logo.png' %}" alt="" />
+          <img src="{% static 'img/logo.gif' %}" alt="" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -756,8 +756,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <script src="{% static 'js/jquery.magnific-popup.min.js' %}"/></script>
   <script src="{% static 'js/parallax.min.js' %}"/></script>
   <script src="{% static 'js/owl.carousel.min.js' %}"/></script>
-  <script src="{% static 'js/jquery.sticky.js' % }"/></script>
-  <script src="{% static 'js/hexagons.min.js' % }"/></script>
+  <script src="{% static 'js/jquery.sticky.js' %}"/></script>
+  <script src="{% static 'js/hexagons.min.js' %}"/></script>
   <script src="{% static 'js/jquery.counterup.min.js' %}"/></script>
   <script src="{% static 'js/waypoints.min.js' %}"/></script>
   <script src="{% static 'js/jquery.nice-select.min.js' %}"/></script>
