--- a/newsite/templates/newsite/courses.html
+++ b/newsite/templates/newsite/courses.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 
@@ -22,15 +23,15 @@
       CSS
       =============================================
     -->
-  <link rel="stylesheet" href="css/linearicons.css" />
-  <link rel="stylesheet" href="css/font-awesome.min.css" />
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/magnific-popup.css" />
-  <link rel="stylesheet" href="css/owl.carousel.css" />
-  <link rel="stylesheet" href="css/nice-select.css">
-  <link rel="stylesheet" href="css/hexagons.min.css" />
+  <link rel="stylesheet" href="{% static 'css/linearicons.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/nice-select.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/hexagons.min.css' %}"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="{% static 'css/main.css' %}"/>
 </head>
 
 <body>
@@ -91,280 +92,7 @@
       </div>
     </div>
   </header>
-  <!-- ================ End Header Area ================= -->
 
-  <!-- ================ start banner Area ================= -->
-  <section class="banner-area">
-      <div class="container">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-lg-12 banner-right">
-            <h1 class="text-white">
-              Courses
-            </h1>
-            <p class="mx-auto text-white  mt-20 mb-40">
-              In the history of modern astronomy, there is probably no one greater leap forward than the building.
-            </p>
-            <div class="link-nav">
-              <span class="box">
-                <a href="index.html">Home </a>
-                <i class="lnr lnr-arrow-right"></i>
-                <a href="courses.html">Courses</a>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  <!-- ================ End banner Area ================= -->
-
-  <!-- ================ Start Feature Area ================= -->
-  <section class="feature-area">
-    <div class="container-fluid">
-      <div class="feature-inner row">
-        <div class="col-lg-2 col-md-6">
-          <div class="feature-item d-flex">
-            <i class="ti-book"></i>
-            <div class="ml-20">
-              <h4>New Classes</h4>
-              <p>
-                In the history of modern astronomy, there is probably no one greater leap forward.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-6">
-          <div class="feature-item d-flex">
-            <i class="ti-cup"></i>
-            <div class="ml-20">
-              <h4>Top Courses</h4>
-              <p>
-                In the history of modern astronomy, there is probably no one greater leap forward.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-6">
-          <div class="feature-item d-flex border-right-0">
-            <i class="ti-desktop"></i>
-            <div class="ml-20">
-              <h4>Full E-Books</h4>
-              <p>
-                In the history of modern astronomy, there is probably no one greater leap forward.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Feature Area ================= -->
-
-  <!-- ================ Start Popular Course Area ================= -->
-  <section class="popular-course-area section-gap">
-    <div class="container-fluid">
-      <div class="row justify-content-center section-title">
-        <div class="col-lg-12">
-          <h2>
-            Popular Courses <br />
-            Available Right Now
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
-      </div>
-      <div class="owl-carousel popuar-course-carusel">
-        <div class="single-popular-course">
-          <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="img/popular-course/p1.jpg" alt="" />
-          </div>
-          <div class="details">
-            <div class="d-flex justify-content-between mb-20">
-              <p class="name">programming language</p>
-              <p class="value">$150</p>
-            </div>
-            <a href="#">
-              <h4>Learn Angular JS Course for Legendary Persons</h4>
-            </a>
-            <div class="bottom d-flex mt-15">
-              <ul class="list">
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-              </ul>
-              <p class="ml-20">25 Reviews</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="single-popular-course">
-          <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="img/popular-course/p2.jpg" alt="" />
-          </div>
-          <div class="details">
-            <div class="d-flex justify-content-between mb-20">
-              <p class="name">programming language</p>
-              <p class="value">$150</p>
-            </div>
-            <a href="#">
-              <h4>Learn Angular JS Course for Legendary Persons</h4>
-            </a>
-            <div class="bottom d-flex mt-15">
-              <ul class="list">
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-              </ul>
-              <p class="ml-20">25 Reviews</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="single-popular-course">
-          <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="img/popular-course/p3.jpg" alt="" />
-          </div>
-          <div class="details">
-            <div class="d-flex justify-content-between mb-20">
-              <p class="name">programming language</p>
-              <p class="value">$150</p>
-            </div>
-            <a href="#">
-              <h4>Learn Angular JS Course for Legendary Persons</h4>
-            </a>
-            <div class="bottom d-flex mt-15">
-              <ul class="list">
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-              </ul>
-              <p class="ml-20">25 Reviews</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="single-popular-course">
-          <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="img/popular-course/p4.jpg" alt="" />
-          </div>
-          <div class="details">
-            <div class="d-flex justify-content-between mb-20">
-              <p class="name">programming language</p>
-              <p class="value">$150</p>
-            </div>
-            <a href="#">
-              <h4>Learn Angular JS Course for Legendary Persons</h4>
-            </a>
-            <div class="bottom d-flex mt-15">
-              <ul class="list">
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-star"></i></a>
-                </li>
-              </ul>
-              <p class="ml-20">25 Reviews</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Popular Course Area ================= -->
-
-  <!-- ================ Start Registration Area ================= -->
-  <section class="registration-area">
-    <div class="container">
-      <div class="row align-items-end">
-        <div class="col-lg-5">
-          <div class="section-title text-left text-white">
-            <h2 class="text-white">
-              Watch Our Trainers <br>
-              in Live Action
-            </h2>
-            <p>
-              If you are looking at blank cassettes on the web, you may be
-              very confused at the difference in price. You may see some for
-              as low as $.17 each.
-            </p>
-          </div>
-        </div>
-        <div class="offset-lg-3 col-lg-4 col-md-6">
-          <div class="course-form-section">
-            <h3 class="text-white">Courses for Free</h3>
-            <p class="text-white">It is high time for learning</p>
-            <form class="course-form-area contact-page-form course-form text-right" id="myForm" action="mail.html" method="post">
-              <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Name'">
-              </div>
-              <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="subject" name="subject" placeholder="Phone Number" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Phone Number'">
-              </div>
-              <div class="form-group col-md-12">
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Email Address'">
-              </div>
-              <div class="col-lg-12 text-center">
-                <button class="btn text-uppercase">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Registration Area ================= -->
-
-  <!-- ================ Start Feature Area ================= -->
   <section class="other-feature-area">
       <div class="container">
         <div class="feature-inner row">
@@ -395,24 +123,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mt--160">
+          <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
-              <i class="ti-files"></i>
-              <h4>Source File Included</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mt--260">
-            <div class="other-feature-item">
-              <i class="ti-medall-alt"></i>
-              <h4>Student Membership</h4>
+              <i class="ti-key"></i>
+              <h4>Lifetime Access</h4>
               <div>
                 <p>
                   Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
@@ -425,8 +139,8 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
-              <i class="ti-briefcase"></i>
-              <h4>35000+ Courses</h4>
+              <i class="ti-key"></i>
+              <h4>Lifetime Access</h4>
               <div>
                 <p>
                   Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
@@ -437,10 +151,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mt--160">
+          <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
-              <i class="ti-crown"></i>
-              <h4>Expert Mentors</h4>
+              <i class="ti-key"></i>
+              <h4>Lifetime Access</h4>
               <div>
                 <p>
                   Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
@@ -451,10 +165,38 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mt--260">
+          <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
-              <i class="ti-headphone-alt"></i>
-              <h4>Live Supports</h4>
+              <i class="ti-key"></i>
+              <h4>Lifetime Access</h4>
+              <div>
+                <p>
+                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
+                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
+                  amet consec tetur adipisicing elit, sed do eiusmod tempor
+                  incididunt labore.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="other-feature-item">
+              <i class="ti-key"></i>
+              <h4>Lifetime Access</h4>
+              <div>
+                <p>
+                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
+                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
+                  amet consec tetur adipisicing elit, sed do eiusmod tempor
+                  incididunt labore.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="other-feature-item">
+              <i class="ti-key"></i>
+              <h4>Lifetime Access</h4>
               <div>
                 <p>
                   Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
@@ -544,21 +286,22 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</footer>
   <!-- ================ End footer Area ================= -->
 
-  <script src="js/vendor/jquery-2.2.4.min.js"></script>
+  <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"/></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-  <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="{% static 'js/vendor/bootstrap.min.js' %}"/></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-  <script src="js/jquery.ajaxchimp.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/parallax.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
-  <script src="js/hexagons.min.js"></script>
-  <script src="js/jquery.counterup.min.js"></script>
-  <script src="js/waypoints.min.js"></script>
-  <script src="js/jquery.nice-select.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"/></script>
+  <script src="{% static 'js/jquery.magnific-popup.min.js' %}"/></script>
+  <script src="{% static 'js/parallax.min.js' %}"/></script>
+  <script src="{% static 'js/owl.carousel.min.js' %}"/></script>
+  <script src="{% static 'js/jquery.sticky.js' %}"/></script>
+  <script src="{% static 'js/hexagons.min.js' %}"/></script>
+  <script src="{% static 'js/jquery.counterup.min.js' %}"/></script>
+  <script src="{% static 'js/waypoints.min.js' %}"/></script>
+  <script src="{% static 'js/jquery.nice-select.min.js' %}"/></script>
+  <script src="{% static 'js/main.js' %}"/></script>
+  <link rel="stylesheet" href="{% static 'css/main.css' %}"/>
 </body>
 
 </html>
