--- a/newsite/templates/newsite/index.html
+++ b/newsite/templates/newsite/index.html
@@ -51,9 +51,10 @@
           <ul class="navbar-nav">
             <li><a href="index.html">Главная</a></li>
             <li><a href="about.html">О нас</a></li>
-            <li><a href="courses.html">Курсы</a></li>
+            <li><a href="courses">Курсы</a></li>
             <!-- Dropdown -->
             <li><a href="contacts.html">Контакты</a></li>
+            <li><a href="#">Регистрация</a></li>
 
             <li>
               <button class="search">
@@ -391,16 +392,16 @@
         </div>
         <div class="offset-lg-3 col-lg-4 col-md-6">
           <div class="course-form-section">
-            <h3 class="text-white">Регистрация</h3>
+            <h3 class="text-white">Вход</h3>
             <p class="text-white">Пришло время начать обучение</p>
             <form class="course-form-area contact-page-form course-form text-right" id="myForm" action="mail.html" method="post">
               <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Имя" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Имя'">
+                <input type="text" class="form-control" id="name" name="name" placeholder="E-Mail" onfocus="this.placeholder = ''"
+                 onblur="this.placeholder = 'E-Mail'">
               </div>
               <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="subject" name="subject" placeholder="Фамилия" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Фамилия'">
+                <input type="text" class="form-control" id="subject" name="subject" placeholder="Никнейм" onfocus="this.placeholder = ''"
+                 onblur="this.placeholder = 'Никнейм'">
               </div>
               <div class="form-group col-md-12">
                 <input type="email" class="form-control" id="email" name="email" placeholder="Личный номер студента" onfocus="this.placeholder = ''"
