--- a/newsite/templates/newsite/courses.html
+++ b/newsite/templates/newsite/courses.html
@@ -99,114 +99,26 @@
           <div class="col-lg-12">
             <div class="section-title text-left">
               <h2>
-                Features That <br />
-                Can Avail By Everyone
+                Список доступных курсов <br />
+                
               </h2>
               <p>
-                If you are looking at blank cassettes on the web, you may be
-                very confused at the difference in price. You may see some for
-                as low as $.17 each.
+                Представляем полный список курсов для изучения материала студентами УРТК
               </p>
             </div>
           </div>
+          {% for category in categories %}
           <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
               <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
+              <a href=#><h4>{{ category.name }}</h4></a>
               <div>
                 <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
                 </p>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
         </div>
       </div>
     </section>
