--- a/newsite/templates/newsite/courses.html
+++ b/newsite/templates/newsite/courses.html
@@ -111,7 +111,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
               <i class="ti-key"></i>
-              <a href="#"><h4>{{ category.name }}</h4></a>
+              <a href="{{ category.get_absolute_url }}"><h4>{{ category.name }}</h4></a>
               <div>
                 <p>
                   {{ category.description_category }}
