--- a/newsite/templates/newsite/coursedetails.html
+++ b/newsite/templates/newsite/coursedetails.html
@@ -111,12 +111,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
               <i class="ti-key"></i>
-              <a href="#"><h4>{{ lesson.title }}</h4></a>
+              <a href="#">
+                <h4>{{ lesson.title }}</h4>
+              </a>
               <div>
                 <div>
                      Преродаватель: {{ lesson.teacher }}<br><br>
                      Категория: {{ lesson.category }}<br><br>
-                     {{ lesson.description | safe }}<br><br>
                 </div>
               </div>
             </div>
