--- a/newsite/templates/newsite/coursedetails.html
+++ b/newsite/templates/newsite/coursedetails.html
@@ -111,7 +111,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="other-feature-item">
               <i class="ti-key"></i>
-              <a href="#">
+              <a href="{{ lesson.get_absolute_url }}">
                 <h4>{{ lesson.title }}</h4>
               </a>
               <div>
