--- a/newsite/templates/newsite/index.html
+++ b/newsite/templates/newsite/index.html
@@ -49,11 +49,11 @@
 
         <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="about.html">О нас</a></li>
+            <li><a href="#">Главная</a></li>
+            <li><a href="http://www.pfurtk.ru/#">О нас</a></li>
             <li><a href="courses">Курсы</a></li>
             <!-- Dropdown -->
-            <li><a href="contacts.html">Контакты</a></li>
+            <li><a href="http://pfurtk.ru/kontakt">Контакты</a></li>
             <li><a href="#">Регистрация</a></li>
 
             <li>
