--- a/newsite/templates/newsite/index.html
+++ b/newsite/templates/newsite/index.html
@@ -54,7 +54,7 @@
             <li><a href="courses">Курсы</a></li>
             <!-- Dropdown -->
             <li><a href="http://pfurtk.ru/kontakt">Контакты</a></li>
-            <li><a href="admin">Администрирование</a></li>
+            <li><a href="admin">Регистрация</a></li>
 
             <li>
               <button class="search">
@@ -192,7 +192,7 @@
 
         <div class="single-popular-course">
           <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="{% static 'img/popular-course/p2.jpg' %}" alt="" />
+            <img class="f-img img-fluid mx-auto" src="{% static 'img/popular-course/p2.jpg' %}" alt="" height="45" width="45" />
           </div>
           <div class="details">
             <div class="d-flex justify-content-between mb-20">
@@ -227,7 +227,7 @@
 
         <div class="single-popular-course">
           <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="{% static 'img/popular-course/p3.jpg' %}" alt="" />
+            <img class="f-img img-fluid mx-auto" src="{% static 'img/popular-course/p1.jpg' %}" alt="" />
           </div>
           <div class="details">
             <div class="d-flex justify-content-between mb-20">
@@ -262,7 +262,7 @@
 
         <div class="single-popular-course">
           <div class="thumb">
-            <img class="f-img img-fluid mx-auto" src="{% static 'img/popular-course/p4.jpg' %}" alt="" />
+            <img class="f-img img-fluid mx-auto" src="{% static 'img/popular-course/p3.jpg' %}" alt="" />
           </div>
           <div class="details">
             <div class="d-flex justify-content-between mb-20">
@@ -424,39 +424,39 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2 col-md-6 single-footer-widget">
-					<h4>ТЕКСТ</h4>
+					<h4>Абитуриенту</h4>
 					<ul>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
+						<li><a href="http://pfurtk.ru/specialty">Специальности</a></li>
+						<li><a href="http://pfurtk.ru/priemnaya-komissiya">Приёмная комиссия</a></li>
+						<li><a href="http://pfurtk.ru/dopolnitelnoe-obrazovanie">Дополнительное образование</a></li>
+						<li><a href="http://pfurtk.ru/podgotovitelnye-kursy">Подготовительные курсы</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-2 col-md-6 single-footer-widget">
-					<h4>ТЕКСТ</h4>
+					<h4>О филиале</h4>
 					<ul>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
+						<li><a href="http://pfurtk.ru/">Главная страница</a></li>
+						<li><a href="http://pfurtk.ru/pedagog">Педагогический коллектив</a></li>
+						<li><a href="http://pfurtk.ru/nashi-dostizheniya">Наши достижения</a></li>
+						<li><a href="http://pfurtk.ru/otchet">Публичный отчёт</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-2 col-md-6 single-footer-widget">
-					<h4>ТЕКСТ</h4>
+					<h4>Студенту</h4>
 					<ul>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
+						<li><a href="http://pfurtk.ru/metodicheskie-materialy">Методические материалы</a></li>
+						<li><a href="http://pfurtk.ru/promezhutochnaya-attestacziya">Промежуточная аттестация</a></li>
+						<li><a href="http://pfurtk.ru/gia">ГИА, ЕГЭ</a></li>
+						<li><a href="http://timetable.pfurtk.ru/">Расписание занятий</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-2 col-md-6 single-footer-widget">
-					<h4>ТЕКСТ</h4>
+					<h4>Полезные ссылки</h4>
 					<ul>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
-						<li><a href="#">текст</a></li>
+						<li><a href="https://vk.com/club139648814">Группа ПФ УРТК вконтакте</a></li>
+						<li><a href="http://www.urtt.ru/">Сайт головного колледжа</a></li>
+						<li><a href="http://pfurtk.ru/kontakt">Контакты</a></li>
+						<li><a href="http://pfurtk.ru/gazeta">Газета</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-4 col-md-6 single-footer-widget">
