--- a/newsite/templates/newsite/courses.html
+++ b/newsite/templates/newsite/courses.html
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" alt="" />
+          <img src="{% static 'img/logo.png' %}" alt="" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,29 +49,12 @@
 
         <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="courses.html">Courses</a></li>
+            <li><a href="#">Главная</a></li>
+            <li><a href="http://www.pfurtk.ru/#">О нас</a></li>
+            <li><a href="courses">Курсы</a></li>
             <!-- Dropdown -->
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                Pages
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="elements.html">Elements</a>
-                <a class="dropdown-item" href="course-details.html">Course Details</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                Blog
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="blog-home.html">Blog Home</a>
-                <a class="dropdown-item" href="blog-single.html">Blog Details</a>
-              </div>
-            </li>
-            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="http://pfurtk.ru/kontakt">Контакты</a></li>
+            <li><a href="admin">Регистрация</a></li>
 
             <li>
               <button class="search">
@@ -100,7 +83,7 @@
             <div class="section-title text-left">
               <h2>
                 Список доступных курсов <br />
-                
+
               </h2>
               <p>
                 <a href="coursedetails">Представляем полный список курсов для изучения материала студентами УРТК</a>
